@@ -1,3 +1,7 @@
+2009-01-02 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Modules/Debuggers/ProjectCenter/PTYView.m: OpenBSD portability
+
 2009-01-01 19:40-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Modules/Debuggers/ProjectCenter/PTYView.[mh]: Changes to use
